--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 									<h2>Contact</h2>
 									<p>Email: tommyxie2000(at)gmail.com</p>
 									<p>Phone: 416-722-425(nine)</p>
+									<p>Address: 40 Bellrock Drive, ON M1V 2V9</p>
 								</section>		
 								
 							</div>
